# jsk_demos

detect_cans_in_fridge_201202/launch/: detect_cans_eng8.launch  startup.launch
jsk_maps/: package.xml
jsk_maps/launch/: data_collection.launch  start_map_eng8.launch
jsk_maps/launch/config/: data_collection.rviz  wrs_for_spot.rviz
jsk_maps/launch/node_scripts/: images_saver.py
jsk_maps/raw_maps/: wrs.yaml
jsk_maps/src/: dump-map-info.l  dump_coords.py  eng2-scene.l  eng8-scene.l
jsk_pr2_plugs/: CMakeLists.txt  package.xml
jsk_pr2_plugs/launch/: apriltag.launch  prosilica.launch
jsk_teaching_object/: CMakeLists.txt  README.md  package.xml
jsk_teaching_object/launch/: edgetpu_detection.launch  edgetpu_detection_with_depth_filter.launch
jsk_teaching_object/sample/: sample_edgetpu_detection_with_depth_filter.launch
jsk_teaching_object/sample/include/: play_daily_object.xml
jsk_teaching_object/scripts/: install_sample_data.py  install_trained_data.py
kxr_flight_unit_recognition/: CMakeLists.txt  package.xml
kxr_flight_unit_recognition/config/: camera_transform.yaml
kxr_flight_unit_recognition/config/apriltag/: tags.yaml
kxr_flight_unit_recognition/launch/: apriltag_detection.launch  apriltag_navigation_demo.launch  camera_transformer.launch  color_extraction_demo.launch  integrated_experiment.launch  joy_lisp_command.launch  object_mocap.launch  pickup_run_attach.launch  transformer.launch
kxr_flight_unit_recognition/scripts/: apriltag_navigator.py  apriltag_smach.py  attach_task.py  attach_task_smach.py  circle_run.py  color_extraction.py  integrated_experiment.py  joy_lisp_command_converter.py  kxr_interface.py  locomotion_task_smach.py  manipulation_task.py  mocap_transformer.py  navigation_smach.py  neck_transformer.py  patrol_task.py  pickup_run_attach.py  pickup_task.py  remove_task.py  remove_task_smach.py  smach_utils.py  state_transitioner.py  transformer.py  transport_task.py  wheel_interface.py
kxr_flight_unit_recognition/src/: example.cpp  obstacles.cpp
stereo_image_sandbox/: CMakeLists.txt  README.md  package.xml  rosinstall
stereo_image_sandbox/calibdata/: left.yaml  right.yaml
stereo_image_sandbox/config/: default.rviz
stereo_image_sandbox/config/apriltag/: tags.yaml
stereo_image_sandbox/euslisp/: listen-doa.l  parrot-node.l
stereo_image_sandbox/include/stereo_image_sandbox/: nodelet.h  split_image.h
stereo_image_sandbox/launch/: apriltag_detection.launch  face_recognition.launch  hand_pose_estimation.launch  hsi_color_filter.launch  people_pose_estimation.launch  pose_estimation.launch  republish_svpro_stereo.launch  rtabmap.launch  rtabmap_all.launch  speech_recognition.launch  svpro_stereo.launch  texttospeech.launch
stereo_image_sandbox/launch/rviz/: default.rviz
stereo_image_sandbox/node_scripts/: boolean_node.py  face_recognition.py  hand_pose_estimation.py  mux_selector.py  people_pose_estimation.py  pi_hat_mic_doa.py  pose_estimation.py  stereo_keypoint_matching.py
stereo_image_sandbox/plugins/nodelet/: libstereo_image_sandbox.xml
stereo_image_sandbox/src/: split_image.cpp
stereo_image_sandbox/src/nodelet/: nodelet.cpp
vosk/: CMakeLists.txt  package.xml
vosk/node_scripts/: vosk_node.py
vosk/scripts/: install_trained_data.py
