<?xml version="1.0"?>
<package>
  <name>jsk_pr2_plugs</name>
  <version>0.0.0</version>
  <description>The jsk_pr2_plugs package</description>
  <maintainer email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>jsk_pr2_startup</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>
  <build_depend>jsk_topic_tools</build_depend>
  <build_depend>message_filter</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>pr2eus</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>jsk_pr2_startup</run_depend>
  <run_depend>pr2eus</run_depend>
  <run_depend>rospy</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
