<package format="3">

  <name>jsk_teaching_object</name>
  <version>0.0.5</version>
  <description>
    Object teaching package.
  </description>

  <license>BSD</license>
  <maintainer email="yanokura@jsk.imi.i.u-tokyo.ac.jp">Iori Yanokura</maintainer>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Iori Yanokura</author>
  <author email="yanokura@jsk.imi.i.u-tokyo.ac.jp">Iori Yanokura</author>
  <author email="shifan@jsk.imi.i.u-tokyo.ac.jp">shifan</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
