<?xml version="1.0"?>
<package format="2">
  <name>kxr_flight_unit_recognition</name>
  <version>0.0.0</version>
  <description>The kxr_flight_unit_recognition package</description>

  <maintainer email="sugihara@jsk.imi.i.u-tokyo.ac.jp">Kazuki Sugihara</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>stereo_image_sandbox</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>

  </export>
</package>
