<package format="3">
  <name>stereo_image_sandbox</name>
  <version>0.0.1</version>

  <description>ROS nodes and nodelets for 2-D stereo image perception.</description>
  <author>Iori Yanokura</author>
  <author email="yanokura@jsk.imi.i.u-tokyo.ac.jp">Iori Yanokura</author>
  <maintainer email="yanokura@jsk.imi.i.u-tokyo.ac.jp">Iori Yanokura</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ALPHABETICAL ORDER -->
  <build_depend>camera_info_manager</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>jsk_topic_tools</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <!-- ALPHABETICAL ORDER -->

  <!-- ALPHABETICAL ORDER -->
  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>cv-bridge-python3</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>jsk_hark_msgs</exec_depend>
  <exec_depend>jsk_recognition_msgs</exec_depend>
  <exec_depend>jsk_topic_tools</exec_depend>
  <exec_depend>libuvc_camera</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>rgbd_launch</exec_depend>
  <exec_depend>ros_speech_recognition</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>stereo_image_proc</exec_depend>
  <!-- ALPHABETICAL ORDER -->

  <!-- ALPHABETICAL ORDER -->
  <test_depend>jsk_tools</test_depend>
  <test_depend>roslaunch</test_depend>
  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>
  <!-- ALPHABETICAL ORDER -->

  <export>
    <nodelet plugin="${prefix}/plugins/nodelet/libstereo_image_sandbox.xml"/>
  </export>
</package>
