<package format="3">
  <name>vosk</name>
  <version>0.0.1</version>
  <description>The voice recognition package using vosk</description>

  <maintainer email="ab.ioryz@gmail.com">Iori Yanokura</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>catkin_virtualenv</build_depend>

  <export>
      <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>
